--- a/server/public/index.html
+++ b/server/public/index.html
@@ -5,11 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- source in angular before js -->
     <script src="vendors/angular.min.js"></script>
     <script src="vendors/angular-route.js"></script>
+    <!-- source in client side code (script folders) -->
     <script src="scripts/client.js"></script>
+    <!-- controllers and services here -->
+
+    <!-- styling -->
+    <link rel="stylesheet" href="vendors/angular-material.css">
+    <script src="vendors/angular-material.min.js"></script>
     <link rel="stylesheet" href="vendors/bootstrap.min.css">
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet"href="styles/style.css" >
     <title>Movie Database</title>
 </head>
 
