angular connection and client side routing

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -7,31 +7,27 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- source in angular before js -->
     <script src="vendors/angular.min.js"></script>
-    <script src="vendors/angular-route.js"></script>
+    <script src="vendors/angular-route.min.js"></script>
     <!-- source in client side code (script folders) -->
     <script src="scripts/client.js"></script>
     <!-- controllers and services here -->
 
     <!-- styling -->
-    <link rel="stylesheet" href="vendors/angular-material.css">
-    <script src="vendors/angular-material.min.js"></script>
+    <!-- <link rel="stylesheet" href="vendors/angular-material.css"> -->
+    <!-- <script src="vendors/angular-material.min.js"></script> -->
     <link rel="stylesheet" href="vendors/bootstrap.min.css">
     <link rel="stylesheet" href="styles/style.css">
     <title>Movie Database</title>
 </head>
 
 
-<div class="container" ng-app="MovieApp">
+<div>
 
-    <body>
+    <body class="container" ng-app="MovieApp">
+        <ng-include src="'views/nav.html'"></ng-include>
         <ng-view></ng-view>
         
-        <div class="topnav">
-            <a href="#!/">Home</a>
-            <a href="#!/movies">Movies</a>
-            <a href="#!/genres">Genres</a>
-
-        </div>
+        
 
     </body>
 </div>
