Get function for displaying movies on DOM works

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -10,7 +10,9 @@
     <script src="vendors/angular-route.min.js"></script>
     <!-- source in client side code (script folders) -->
     <script src="scripts/client.js"></script>
-    <!-- controllers and services here -->
+    <!-- controllers here -->
+    <script src="scripts/controllers/movies.controller.js"></script>
+    <script src="scripts/controllers/genres.controller.js"></script>
 
     <!-- styling -->
     <!-- <link rel="stylesheet" href="vendors/angular-material.css"> -->
