cardson movie page show up in columns and rows

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -17,7 +17,7 @@
     <!-- styling -->
     <!-- <link rel="stylesheet" href="vendors/angular-material.css"> -->
     <!-- <script src="vendors/angular-material.min.js"></script> -->
-    <!-- <link rel="stylesheet" href="vendors/bootstrap.min.css"> -->
+    <link rel="stylesheet" href="vendors/bootstrap.min.css">
     <link rel="stylesheet" href="styles/style.css">
     <title>Movie Database</title>
 </head>
